# MIS_Deleting_K_Edges

./: .gitignore  CMakeLists.txt  EdgeDeleteIndex.cpp  EdgeDeleteIndex.h  ExactSolver.cpp  ExactSolver.h  Graph.cpp  Graph.h  LastDeleter.cpp  LastDeleter.h  PayAndTry.cpp  PayAndTry.h  ProfitDeleteIndex.cpp  ProfitDeleteIndex.h  README.md  Utility.cpp  Utility.h  experiments.sh  main.cpp  makefile  mis  nohup.out  test.sh
Competitors/: optionalSolver.py
Data/SNAP/: er_generator.py
EdgeIndex/: BaseEdgeIndex.cpp  BaseEdgeIndex.h  EdgeDeleteIndex.cpp  EdgeDeleteIndex.h  ProbabilityDeleteIndex.cpp  ProbabilityDeleteIndex.h  ProfitDeleteIndex.h
LastDeleter/: LastDeleter.cpp  LastDeleter.h
LocalSearch/: BasicVersion.cpp  BasicVersion.h
Log/: LogReader.cpp  LogReader.h  LogWriter.cpp  LogWriter.h
PayAndTry/: NearLinearPayAndTry.cpp  NearLinearPayAndTry.h  PayAndTry.cpp  PayAndTry.h  ProbabilityPayAndTry.cpp  ProbabilityPayAndTry.h  RiskPayAndTry.cpp  RiskPayAndTry.h
Widget/: Notifier.cpp  Notifier.h
example_graph/: read_bin_file.py  write_bin_file.py
